tests/errors/semantic/blocking/INSERT_LIST_INCOMPATIBLE_TYPES_1.py
# pylint: disable=missing-function-docstring, missing-module-docstring


a = [1,2,3]
a.insert(3, [4])

